[metadata]
license_file = LICENSE


[tool:pytest]
addopts = --cov=yarl -v
norecursedirs = dist docs build .tox .eggs venv virtualenv .git
minversion = 3.8.2
testpaths = tests/
junit_suite_name = yarl_test_suite
filterwarnings =
    error
    # https://github.com/pytest-dev/pytest/issues/10977 and https://github.com/pytest-dev/pytest/pull/10894
    ignore:ast\.(Num|NameConstant|Str) is deprecated and will be removed in Python 3\.14; use ast\.Constant instead:DeprecationWarning:_pytest
    ignore:Attribute s is deprecated and will be removed in Python 3\.14; use value instead:DeprecationWarning:_pytest

[pep8]
max-line-length=79

[flake8]
ignore = E203,E301,E302,E704,W503,W504,F811
max-line-length = 88

[isort]
profile=black

[mypy]
# check_untyped_defs = True
# disallow_any_generics = True
# disallow_untyped_defs = True
# follow_imports = silent
# strict_optional = True
# warn_redundant_casts = True
# warn_unused_ignores = True

[mypy-idna]
ignore_missing_imports = true

[mypy-pytest]
ignore_missing_imports = true
