[bdist_wheel]
# wheels should be OS-specific:
# their names must contain macOS/manulinux1/2010/2014/Windows identifiers
universal = 0

[metadata]
name = yarl
version = attr: yarl.__version__
url = https://github.com/aio-libs/yarl
project_urls =
  Chat: Matrix = https://matrix.to/#/#aio-libs:matrix.org
  Chat: Matrix Space = https://matrix.to/#/#aio-libs-space:matrix.org
  CI: GitHub Workflows = https://github.com/aio-libs/yarl/actions?query=branch:master
  Code of Conduct = https://github.com/aio-libs/.github/blob/master/CODE_OF_CONDUCT.md
  Coverage: codecov = https://codecov.io/github/aio-libs/yarl
  Docs: Changelog = https://yarl.aio-libs.org/en/latest/changes/
  Docs: RTD = https://yarl.aio-libs.org
  GitHub: issues = https://github.com/aio-libs/yarl/issues
  GitHub: repo = https://github.com/aio-libs/yarl
description = Yet another URL library
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
author = Andrew Svetlov
author_email = andrew.svetlov@gmail.com
maintainer = aiohttp team <team@aiohttp.org>
maintainer_email = team@aiohttp.org
license = Apache-2.0
license_files =
  LICENSE
  NOTICE
classifiers =
  Development Status :: 5 - Production/Stable

  Intended Audience :: Developers

  License :: OSI Approved :: Apache Software License

  Programming Language :: Cython
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3.13

  Topic :: Internet :: WWW/HTTP
  Topic :: Software Development :: Libraries :: Python Modules
keywords =
  cython
  cext
  yarl

[options]
python_requires = >=3.9
# Ref:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#using-a-src-layout
# (`src/` layout)
# package_dir =
#   = src
packages =
  yarl
# https://setuptools.pypa.io/en/latest/deprecated/zip_safe.html
zip_safe = False
include_package_data = True

install_requires =
  idna >= 2.0
  multidict >= 4.0
  propcache >= 0.2.1

[options.package_data]
# Ref:
# https://setuptools.pypa.io/en/latest/userguide/datafiles.html#package-data
# (see notes for the asterisk/`*` meaning)
* =
  *.so

[options.exclude_package_data]
* =
  *.c
  *.h

[pep8]
max-line-length=79

[flake8]
ignore = E203,E301,E302,E704,W503,W504,F811
max-line-length = 88

# Allow certain violations in certain files:
per-file-ignores =

  # F401   imported but unused
  packaging/pep517_backend/hooks.py: F401

[isort]
profile=black
